File Loader Created for backend

--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -14,3 +14,7 @@ jwt.route.authentication.path=/login
 jwt.route.authentication.refresh=/refresh
 
 server.error.include-stacktrace=never
+
+# file upload properties: file size constraint
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=1MB
